# Flat.Simplex

./: .gitignore  Visual Lang.ai  doc.txt
App/my-electron-app/: package-lock.json  package.json
CppLibrary/: CMakeLists.txt  glad.c  main.cpp
CppLibrary/include/: stb_image.h  stb_truetype.h
CppLibrary/include/GLFW/: glfw3.h
CppLibrary/include/glad/: glad.h
CppLibrary/simplex/: Base.h  Chars.h  Classes.h  Double.h  HashName.cpp  HashName.h  Simplex.cpp  Simplex.h
CppLibrary/simplex/debug/: Debug.cpp  Debug.h
CppLibrary/simplex/display/: Display.cpp  Display.h
CppLibrary/simplex/draw/: Draw.cpp  Draw.h
CppLibrary/simplex/engine/: GameAsset.cpp  GameAsset.h  GameEngine.cpp  GameEngine.h  GameInstanceData.cpp  GameInstanceData.h  GameObject.cpp  GameObject.h  GameObjectModule.cpp  GameObjectModule.h  GameRender.cpp  GameRender.h  GameSettings.cpp  GameSettings.h  Parse.cpp  Parse.h
CppLibrary/simplex/engine/assets/: AssetEntry.cpp  AssetEntry.h  Assets.h  GameResources.cpp  GameResources.h  Image.cpp  Image.h  ObjectAsset.cpp  ObjectAsset.h  ObjectModule.cpp  ObjectModule.h  SceneAsset.cpp  SceneAsset.h  SceneCamera.cpp  SceneCamera.h  SceneItem.cpp  SceneItem.h  SpriteAnim.cpp  SpriteAnim.h  SpriteAsset.cpp  SpriteAsset.h
CppLibrary/simplex/exception/: Exception.cpp  Exception.h
CppLibrary/simplex/game/: Game.cpp  Game.h
CppLibrary/simplex/input/: Input.cpp  Input.h
CppLibrary/simplex/instance/: Instance.cpp  Instance.h
CppLibrary/simplex/managed/: Asset.cpp  Asset.h  Managed.cpp  Managed.h  Object.cpp  Object.h
CppLibrary/simplex/operators/: OperatorAdd.h  OperatorAnd.h  OperatorDif.h  OperatorDiv.h  OperatorEq.h  OperatorGr.h  OperatorGrEq.h  OperatorLs.h  OperatorLsEq.h  OperatorLsf.h  OperatorMod.h  OperatorMul.h  OperatorOr.h  OperatorRsf.h  OperatorSub.h  OperatorXor.h
CppLibrary/simplex/values/: Arguments.cpp  Arguments.h  Array.cpp  Array.h  Function.cpp  Function.h  Grid.cpp  Grid.h  Map.cpp  Map.h  Pointer.cpp  Pointer.h  Reference.cpp  Reference.h  String.cpp  String.h  Struct.cpp  Struct.h  Value.cpp  Value.h
CppLibrary/test/: System.cpp  System.h  Test.cpp  Test.h
JavaLibrary/: pom.xml
SimplexApp/: index.css  index.css.map  index.html  index.js  index.scss  main.js  package-lock.json  package.json
SimplexApp/coverage/: clover.xml  coverage-final.json  lcov.info
SimplexApp/css/: buttons.css  buttons.css.map  buttons.scss  colors.css  colors.css.map  colors.scss  (+18 more)
(+371 files in other folders)
